.provarCaches/00D6C0000000xA6UAI/objects/redwing__RichText_Content__c.object
<CustomObject>
    <fields>
        <fullName>Dev_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dev External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Content__c</fullName>
        <label>Content</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__RichText__c</fullName>
        <label>Rich Text</label>
        <referenceTo>redwing__RichText__c</referenceTo>
        <relationshipLabel>Rich Text Content</relationshipLabel>
        <relationshipName>RichText_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Title__c</fullName>
        <inlineHelpText>Title for this rich text content section</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Video_Dimensions_Unit__c</fullName>
        <label>Video Dimensions Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pixels</fullName>
                    <default>true</default>
                    <label>pixels</label>
                </value>
                <value>
                    <fullName>percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Video_Height__c</fullName>
        <label>Video Height</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Video_URL__c</fullName>
        <inlineHelpText>URL for an embedded video as part of this Rich Text Content</inlineHelpText>
        <label>Video URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Video_Width__c</fullName>
        <label>Video Width</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rich Text Content</label>
    <nameField>
        <displayFormat>RTC-{0000000}</displayFormat>
        <label>Content ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rich Text Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>